# protei-test-assignment

./: CMakeLists.txt  LICENSE.txt
doc/: README.txt
src/client/: CMakeLists.txt  main.cpp  socketwrapper.cpp  socketwrapper.h  worker.h
src/server/: CMakeLists.txt  main.cpp  simpleparser.cpp  simpleparser.h  socketwrapper.h  worker.h
src/shared/: constants.h  types.h
tests/: CMakeLists.txt  main.cpp  tst_client.h  tst_server.h
